[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UnityPy"
authors = [{ name = "Rudolf Kolbe", email = "rkolbe96@gmail.com" }]
description = "A Unity extraction and patching package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
keywords = [
    "python",
    "unity",
    "unity-asset",
    "python3",
    "data-minig",
    "unitypack",
    "assetstudio",
    "unity-asset-extractor",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    # block compression/decompression
    "lz4",    # BundleFile block compression
    "brotli", # WebFile compression
    # Texture & Sprite handling
    "Pillow",
    "texture2ddecoder",         # texture decompression
    "etcpak",                   # ETC & DXT compression
    "astc-encoder-py >= 0.1.8", # ASTC compression
    # audio extraction
    "pyfmodex >= 0.7.1",
    # filesystem handling
    "fsspec",
    # better classes
    "attrs",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/K0lb3/UnityPy"
"Bug Tracker" = "https://github.com/K0lb3/UnityPy/issues"

[tool.setuptools.dynamic]
version = { attr = "UnityPy.__version__" }

[project.optional-dependencies]
tests = ["pytest", "pillow", "psutil"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "i686"]
# auditwheel issues with fmod on: "aarch64", "armv7l"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]
