[metadata]
name = UnityPy
version = 1.1.2
description = Python implementation of the .unity3d format
author = K0lb3
url = https://github.com/HearthSim/UnityPack
download_url = https://github.com/HearthSim/UnityPack/tarball/master
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Multimedia :: Graphics

[options]
packages = find:

install_requires =
	decrunch
	fsb5
	lz4
	Pillow
